# AdventOfCode

./: .gitignore  CMakeLists.txt  README.md  aoc2020_day1.c  aoc2020_day13.c  aoc2020_day14.c  aoc2020_day15.c  aoc2020_day16.c  aoc2020_day17.c  aoc2020_day18.c  aoc2020_day19.c  aoc2020_day2.c  aoc2020_day20.c  aoc2020_day21.c  aoc2020_day22.c  aoc2020_day3.c  aoc2020_day4.c  aoc2020_day5.c  aoc2020_day6.c  aoc2020_day7.c  cmp.c  combinations.c  main.c
argtable/: CMakeLists.txt
mpc/: CMakeLists.txt
